--- a/com.sspl.PKIServicesDashboard/.classpath
+++ b/com.sspl.PKIServicesDashboard/.classpath
@@ -16,10 +16,6 @@
 	<classpathentry kind="lib" path="/home/pete/eclipse-workspace/libs/log4j/apache-log4j-2.14.1-bin/log4j-api-2.14.1-javadoc.jar"/>
 	<classpathentry kind="lib" path="/home/pete/eclipse-workspace/libs/log4j/apache-log4j-2.14.1-bin/log4j-core-2.14.1.jar"/>
 	<classpathentry kind="lib" path="/home/pete/eclipse-workspace/libs/log4j/apache-log4j-2.14.1-bin/log4j-core-2.14.1-javadoc.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.46">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/apache-tomcat-9.0.55"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
